--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name"              : "自動計画システム",
   "short_name"        : "自動計画システム",
   "description"       : "自動計画システム",
-  "start_url"         : "/",
+  "start_url"         : "/schedule",
   "display"           : "standalone",
   "background_color"  : "#000000",
   "theme_color"       : "#000000",
